# grant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
data/manual_seed/: application_history.manual.csv  client_profiles.manual.csv  document_inventory.manual.csv
docs/: fields.md  implemented_mvp.md  initial_sources.md  operations.md  start.md  technologies.md
docs/Explanation/: how-we-collect-grants.md
docs/plan/: gurt_theory_.md  implemented_for_search.md  plan_for_search.md
grant_tool/: __init__.py  celery_app.py  cli.py  client_import.py  config.py  main.py  sources.py
grant_tool/dashboard/: __init__.py  routes.py  service.py
grant_tool/data_quality/: __init__.py  contract.py  normalization.py  scoring.py  service.py
migrations/: env.py
planning/: fields.md  plan.md  source_access.md  step1_stages.md  technologies.md
review/: 00-VERDICT.md  01-ACTION-PLAN.md  02-security.md  03-matching-embeddings-dedup.md  04-llm-extraction.md  05-ingestion-connectors.md  06-architecture.md  07-code-quality.md  08-database.md  09-tests.md  10-docs-and-product.md  11-web-api-ops.md  README.md
tests/: test_data_deduplication.py  test_data_normalization.py  test_data_preparation_audit.py  test_data_quality_contract.py  test_data_quality_score.py  test_stage2_repository.py  test_stage3_ingestion.py  test_stage4_import.py  test_stage5_extraction.py  test_stage6_matching.py  test_stage7_embeddings.py  test_stage8_explanations.py  test_stage8_search_report.py  test_stage9_dashboard.py
(+69 files in other folders)
